[tool.poetry]
name = "TradingMate"
version = "2.2.0"
description = "Trading portfolio and real time stock price monitor"
authors = ["Alberto Cardellini"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ilcardella/TradingMate"
documentation = "https://tradingmate.readthedocs.io/en/latest"
packages = [
    { include = "tradingmate" }
]
include = ["config/config.json", "data/trading_log.json"]

[tool.poetry.dependencies]
python = "^3.6.1"
alpha_vantage = "^2.3.1"
yfinance = "^0.1.55"
lxml = "^4.6.2"
pygtail = "^0.11.1"

[tool.poetry.dev-dependencies]
sphinx = "^3.4.3"
sphinx-rtd-theme = "^0.5.1"
requests-mock = "^1.8.0"
docutils = "^0.16"
pytest = "^6.2.1"
black = {version = "^20.8b1", allow-prereleases = true}
isort = {version = "^5.7.0", allow-prereleases = true}
flake8 = "^3.8.4"
mypy = "^0.790"

[tool.poetry.scripts]
trading_mate = 'tradingmate:main'

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output=3
include_trailing_comma="True"
force_grid_wrap=0
use_parentheses="True"
line_length=88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
