[tool.poetry]
name = "TradingMate"
version = "2.2.0"
description = "Trading portfolio and real time stock price monitor"
authors = ["Alberto Cardellini"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ilcardella/TradingMate"
documentation = "https://tradingmate.readthedocs.io/en/latest"
packages = [
    { include = "tradingmate" }
]
include = ["config/config.json", "data/trading_log.json"]

[tool.poetry.dependencies]
python = "^3.7.1"
alpha_vantage = "^2.3.1"
yfinance = "^0.2.23"
lxml = "^4.9.1"
pygtail = "^0.12.0"

[tool.poetry.dev-dependencies]
sphinx = "^4.3.2"
sphinx-rtd-theme = "^1.0.0"
requests-mock = "^1.10.0"
docutils = "^0.17.1"
pytest = "^7.1.2"
black = {version = "^22.8", allow-prereleases = true}
isort = "^5.10.1"
mypy = "^0.931"
flake8 = "^4.0.1"

[tool.poetry.scripts]
trading_mate = 'tradingmate:main'

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output=3
include_trailing_comma="True"
force_grid_wrap=0
use_parentheses="True"
line_length=88

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
